--- a/package.json
+++ b/package.json
@@ -7,6 +7,13 @@
     "body-parser": "^1.11.0",
     "ejs": "^2.2.4",
     "express": "^4.11.2",
+    "gulp": "^3.8.11",
+    "gulp-concat": "^2.5.2",
+    "gulp-ng-annotate": "^0.5.2",
+    "gulp-nodemon": "^1.0.5",
+    "gulp-sourcemaps": "^1.4.0",
+    "gulp-stylus": "^2.0.1",
+    "gulp-uglify": "^1.1.0",
     "nodemailer": "^1.3.0",
     "nodemailer-mailgun-transport": "^1.0.0",
     "nodemailer-smtp-transport": "^0.1.13"
